@@ -1,7 +1,7 @@
 Source: debian-installer
 Section: devel
 Priority: extra
-Build-Depends: apt, bc, slang1-utf8-pic, libnewt-pic, syslinux (>= 2.04-1) [i386], sysutils [i386], dosfstools [i386 ia64], libdiscover1-pic [!s390 !s390x !mips !mipsel], libdiscover1 [!s390 !s390x !mips !mipsel], ncurses-base, genext2fs, mklibs (>= 0.1.15), modutils, glibc-pic, mtools (>= 3.9.9-1) [i386 ia64], bf-utf-source [!s390 !s390x], upx-ucl-beta [i386], libbogl-dev, libtextwrap1, debhelper (>= 4), tip22 [mips], yaboot [powerpc], mkisofs, elilo [ia64], fakeroot, aboot [alpha], silo [sparc], libdebian-installer4, libdebconfclient0, libiw27, palo [hppa], kernel-build-2.4.25-powerpc [powerpc]
+Build-Depends: apt, bc, slang1-utf8-pic, libnewt-pic, syslinux (>= 2.04-1) [i386], sysutils [i386], dosfstools [i386 ia64], libdiscover1-pic [!s390 !s390x !mips !mipsel], libdiscover1 [!s390 !s390x !mips !mipsel], ncurses-base, genext2fs, mklibs (>= 0.1.15), modutils, glibc-pic, mtools (>= 3.9.9-1) [i386 ia64], bf-utf-source [!s390 !s390x], upx-ucl-beta [i386], libbogl-dev, libtextwrap1, debhelper (>= 4), tip22 [mips], yaboot [powerpc], mkisofs, elilo [ia64], fakeroot, aboot [alpha], silo [sparc], libdebian-installer4, libdebconfclient0, libiw27, palo [hppa], kernel-build-2.4.25-powerpc [powerpc], docbook, docbook-xml, docbook-xsl, xsltproc
 Maintainer: Debian Install System Team <debian-boot@lists.debian.org>
 Uploaders: Joey Hess <joeyh@debian.org>, Alastair McKinstry <mckinstry@computer.org>
 Standards-Version: 3.6.1.0
