@@ -1,5 +1,4 @@
 <html>
-	The documentation for debian-installer is as of yet incomplete.
-	For now, there is only the
-	<a href="INSTALLATION-HOWTO">INSTALLATION HOWTO</a>
+	<a href="INSTALLATION-HOWTO">Installation HOWTO</a>
+	<a href="manual/en">Installation Guide</a>
 </html>
