@@ -10,6 +10,13 @@ debian-installer (20040316) UNRELEASED; urgency=low
     - Left devfs=mount in syslinux.cfg anyway, out of general caution.
     - Add another dh_testroot call before udebs are downloaded.
     - Document debian-installer/probe/usb=false in syslinux f7.txt.
+    - Docs are now included in the source package.
+    - Remove the INSTALLATION-HOWTO copy hack.
+    - Add docbook, docbook-xml, docbook-xsl, xsltproc to build deps.
+    - Add the installation manual to the image tarballs.
+    - Use svn up in daily-build; we moved to subversion.
+    - Allow passing languages and arches to manual/build/build.sh in env
+      variables, and mkdir -p.
   * dann frazier
     - Fix installs w/ USB keyboards w/ ia64 cdroms.  Add input-modules to the
       pkglist, and fix ia64.cfg, which was pointing at the non-smp kernel.
